# Mtext

./: .gitignore  CMakeLists.txt  README.md  charsmodel.cpp  charsmodel.h  charswidget.cpp  charswidget.h  charswidget.ui  editorgraphicsview.cpp  editorgraphicsview.h  main.cpp  matrixbutton.cpp  mtext.qrc  mtext.rc  ranges.h  textedit-qt4.h  textedit-qt5.h  textedit-qt6.h  textedit.cpp
